Template Inheritance with Jinja completed

--- a/static/style.css
+++ b/static/style.css
@@ -4,3 +4,19 @@ h1{
 body{
     background-color: white;
 }
+#header {
+    padding: 10px;
+    text-align: center;
+    background: #140005;
+    color: white;
+    font-size: 20px;
+  }
+  #footer {
+     position: fixed;
+     width: 100%;
+     background-color: #BBC4C2;
+     color: white;
+     text-align: center;
+     left: 0;
+     bottom:0;
+  }
