--- a/static/style.css
+++ b/static/style.css
@@ -11,12 +11,21 @@ body{
     color: white;
     font-size: 20px;
   }
-  #footer {
-     position: fixed;
-     width: 100%;
-     background-color: #BBC4C2;
-     color: white;
-     text-align: center;
-     left: 0;
-     bottom:0;
+#footer {
+    position: fixed;
+    width: 100%;
+    background-color: #BBC4C2;
+    color: white;
+    text-align: center;
+    left: 0;
+    bottom:0;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
+  
+li {
+    display: inline;
+}
