--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,12 @@
         <title>{% block title %} {% endblock %}</title>
     </head>
     <body>
+        <div>
+            <ul>
+                <li><a href="{{url_for('home')}}">Home</a></li>
+                <li><a href="{{url_for('login')}}">Login</a></li>
+            </ul>
+        </div>
         <div id="header">
             <h1><center>Flask Web Application</center></h1>
             <p><center>by {{username}}</center></p>
