--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,19 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %} Login {% endblock %}
+{% block title %} signup {% endblock %}
 
 
 {% block content %}
-<h1>login</h1>
-
-{% if message %}
- <h1>{{message}}</h1>
- {% endif %}
+<h1>Sign up</h1>
 
 {# The action will direct the submit request to the login view function. #}
-<form action="{{url_for('login')}}" method = "POST">
-    {{ form.email.label }} <br>
-    {{ form.email }}
+<form action="{{url_for('signup')}}" method = "POST">
+    {{ form.username.label }} <br>
+    {{ form.username }}
     <br>
     {{ form.password.label }} <br>
     {{ form.password }}
